--- a/index.html
+++ b/index.html
@@ -77,8 +77,12 @@
         </form>
       </div>
     </div>
-    <div class="popup">
-      
+    <div class="popup popup_opacity">
+      <div class="popup__container">
+        <button type="button" aria-label="Закрыть" class="popup__close-button"></button>
+        <img class="popup__image" src="" alt="">
+        <h2 class="popup__title"></h2>
+      </div>
     </div>
   </div>
   <script src="./script.js"></script>
