Добавить папку src и перенести туда файлы js

--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
           <h2 class="edit-form__title">Редактировать профиль</h2>
           <fieldset class="edit-form__profile-info">
             <label class="edit-form__label" for="name"></label>
-            <input name="name" value="" class="edit-form__input-text" type="text" id="name">
+            <input name="name" value="" class="edit-form__input-text" type="text" id="name" placeholder="Имя">
             <label class="edit-form__label" for="profession"></label>
-            <input name="profession" value="" class="edit-form__input-text" type="text" id="profession">
+            <input name="profession" value="" class="edit-form__input-text" type="text" id="profession" placeholder="Вид деятельности">
           </fieldset>
           <button class="edit-form__button" type="submit">Сохранить</button>
         </form>
@@ -85,7 +85,8 @@
       </div>
     </div>
   </div>
-  <script src="./script.js"></script>
+  <script src="src/constants.js"></script>
+  <script src="src/script.js"></script>
 </body>
 
 </html>
