Отредактировать файлы index и script

--- a/index.html
+++ b/index.html
@@ -53,9 +53,11 @@
           <h2 class="edit-form__title">Редактировать профиль</h2>
           <fieldset class="edit-form__profile-info">
             <label class="edit-form__label" for="name"></label>
-            <input name="name" value="" class="edit-form__input-text edit-form__input-text-name" type="text" id="name" placeholder="Имя">
+            <input name="name" value="" class="edit-form__input-text edit-form__input-text-name" type="text" id="name"
+              placeholder="Имя">
             <label class="edit-form__label" for="job"></label>
-            <input name="job" value="" class="edit-form__input-text edit-form__input-text-job" type="text" id="job" placeholder="Вид деятельности">
+            <input name="job" value="" class="edit-form__input-text edit-form__input-text-job" type="text" id="job"
+              placeholder="Вид деятельности">
           </fieldset>
           <button class="edit-form__button" type="submit">Сохранить</button>
         </form>
@@ -68,10 +70,11 @@
           <h2 class="edit-form__title add-card-form__title">Новое место</h2>
           <fieldset class="edit-form__profile-info add-card-form__profile-info">
             <label class="edit-form__label add-card-form__label" for="card-name"></label>
-            <input name="card-name" value="" class="edit-form__input-text add-card-form__input-text-card-name" type="text" id="card-name" placeholder="Название">
+            <input name="card-name" value="" class="edit-form__input-text add-card-form__input-text-card-name"
+              type="text" id="card-name" placeholder="Название">
             <label class="edit-form__label add-card-form__label" for="link"></label>
-            <input name="link" value="" class="edit-form__input-text add-card-form__input-text-link" type="text" id="link"
-              placeholder="Ссылка на картинку">
+            <input name="link" value="" class="edit-form__input-text add-card-form__input-text-link" type="text"
+              id="link" placeholder="Ссылка на картинку">
           </fieldset>
           <button class="edit-form__button add-card-form__button" type="submit">Сохранить</button>
         </form>
