--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
   </footer>
   <div class="popup popup_edit-form">
     <div class="edit-form-container">
-      <button type="button" aria-label="Закрыть" class="edit-form__close-button"></button>
+      <button type="button" aria-label="Закрыть" class="edit-form__close-button popup__close-button"></button>
       <form class="edit-form" method="post" name="editForm" novalidate>
         <h2 class="edit-form__title">Редактировать профиль</h2>
         <fieldset class="edit-form__profile-info">
@@ -69,7 +69,7 @@
   </div>
   <div class="popup popup_add-card-form">
     <div class="edit-form-container add-card-form-container">
-      <button type="button" aria-label="Закрыть" class="edit-form__close-button add-card-form__close-button"></button>
+      <button type="button" aria-label="Закрыть" class="edit-form__close-button add-card-form__close-button popup__close-button"></button>
       <form class="edit-form add-card-form" method="post" name="addCardForm" novalidate>
         <h2 class="edit-form__title add-card-form__title">Новое место</h2>
         <fieldset class="edit-form__profile-info add-card-form__profile-info">
