--- a/src/index.html
+++ b/src/index.html
@@ -18,11 +18,14 @@
   <main class="content">
     <section class="profile">
       <div class="profile__info">
-        <img src="<%=require('./images/avatar.jpg')%>" alt="Аватар" class="profile__avatar">
+        <div class="profile__avatar-wrapper">
+          <img src="" alt="Аватар" class="profile__avatar">
+          <div class="profile__edit-avatar-image"></div>
+        </div>
         <div class="profile__info-container">
           <div class="profile__info-text">
-            <h1 class="profile__title">Жак-Ив Кусто</h1>
-            <p class="profile__subtitle">Исследователь океана</p>
+            <h1 class="profile__title"></h1>
+            <p class="profile__subtitle"></p>
           </div>
           <button aria-label="Редактировать" type="button" class="profile__edit-button"></button>
         </div>
@@ -37,7 +40,10 @@
           <button aria-label="Удалить" type="button" class="element__trash"></button>
           <div class="element__description">
             <h2 class="element__title"></h2>
-            <button aria-label="Мне нравится" type="button" class="element__like"></button>
+            <div class="element__like-wrapper">
+              <button aria-label="Мне нравится" type="button" class="element__like"></button>
+              <div class="element__like-number"></div>
+            </div>
           </div>
         </article>
       </template>
@@ -90,11 +96,39 @@
       </form>
     </div>
   </div>
+  <div class="popup popup_edit-avatar">
+    <div class="edit-form-container edit-avatar-form-container">
+      <button type="button" aria-label="Закрыть" class="edit-form__close-button edit-avatar-form__close-button popup__close-button"></button>
+      <form class="edit-form edit-avatar-form" method="post" name="editAvatarForm" novalidate>
+        <h2 class="edit-form__title edit-avatar-form__title">Обновить аватар</h2>
+        <fieldset class="edit-form__profile-info edit-avatar-form__profile-info">
+          <label class="edit-form__label edit-avatar-form__label" for="link-avatar"></label>
+          <input name="link-avatar" value="" class="edit-form__input-text edit-avatar-form__input-text-link"
+                 id="link-avatar" placeholder="Ссылка на картинку" required type="url">
+          <span class="link-avatar-error edit-form__input-error"></span>
+        </fieldset>
+        <button class="edit-form__button edit-avatar-form__button edit-form__button_disabled" type="submit" disabled>
+          Сохранить
+        </button>
+      </form>
+    </div>
+  </div>
   <div class="popup popup_image">
     <div class="popup__container">
       <button type="button" aria-label="Закрыть" class="popup__close-button"></button>
       <img class="popup__image" src="" alt="">
       <h2 class="popup__title"></h2>
+    </div>
+  </div>
+  <div class="popup popup_confirm-delete-card">
+    <div class="edit-form-container">
+      <form action="post" class="edit-form confirm-delete-card-form">
+        <button type="button" aria-label="Закрыть" class="popup__close-button"></button>
+        <h2 class="edit-form__title edit-form__title_space_bottom confirm-delete-card-form__title">Вы уверены?</h2>
+        <button class="edit-form__button confirm-delete-card__button" type="submit">
+          Да
+        </button>
+      </form>
     </div>
   </div>
 </div>
