--- a/src/index.html
+++ b/src/index.html
@@ -75,7 +75,8 @@
   </div>
   <div class="popup popup_add-card-form">
     <div class="edit-form-container add-card-form-container">
-      <button type="button" aria-label="Закрыть" class="edit-form__close-button add-card-form__close-button popup__close-button"></button>
+      <button type="button" aria-label="Закрыть"
+              class="edit-form__close-button add-card-form__close-button popup__close-button"></button>
       <form class="edit-form add-card-form" method="post" name="addCardForm" novalidate>
         <h2 class="edit-form__title add-card-form__title">Новое место</h2>
         <fieldset class="edit-form__profile-info add-card-form__profile-info">
@@ -98,7 +99,8 @@
   </div>
   <div class="popup popup_edit-avatar">
     <div class="edit-form-container edit-avatar-form-container">
-      <button type="button" aria-label="Закрыть" class="edit-form__close-button edit-avatar-form__close-button popup__close-button"></button>
+      <button type="button" aria-label="Закрыть"
+              class="edit-form__close-button edit-avatar-form__close-button popup__close-button"></button>
       <form class="edit-form edit-avatar-form" method="post" name="editAvatarForm" novalidate>
         <h2 class="edit-form__title edit-avatar-form__title">Обновить аватар</h2>
         <fieldset class="edit-form__profile-info edit-avatar-form__profile-info">
