--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@
                  data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы">
           <span class="name-error edit-form__input-error"></span>
           <label class="edit-form__label" for="job"></label>
-          <input name="job" value="" class="edit-form__input-text edit-form__input-text-job" type="text" id="job"
+          <input name="about" value="" class="edit-form__input-text edit-form__input-text-job" type="text" id="job"
                  placeholder="Вид деятельности" required minlength="2" maxlength="200" pattern="^[A-Za-zА-Яа-яЁё\s\-]+$"
                  data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы">
           <span class="job-error edit-form__input-error"></span>
